[tool.poetry]
name = "baselines"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.9"
torch = {version = "1.8.1", source = "torch_cu111"}
torchvision = {version = "0.9.1", source = "torch_cu111"}
pandas = "1.2.3"
ax-platform = "0.1.20"
pyro4 = "^4.82"
numpy = "1.22"
configspace = "0.5"
pygmo = "2.16.1"
statsmodels = "0.12.2"
scipy = "1.6.3"
pydoe2 = "^1.3.0"
tqdm = "4.60.0"
torch-summary = "^1.4.5"
matplotlib = "3.4.1"


[[tool.poetry.source]]
name = "torch_cu111"
url = "https://download.pytorch.org/whl/cu111"
priority = "supplemental"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
